--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -12,9 +12,9 @@ name: OpenWrt-CI
 on:
   schedule:
     - cron: 0 0 1 * *
- # push:
- #   branches: 
- #     - master
+  push:
+    branches: 
+      - master
 
 jobs:
 
