--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -50,11 +50,11 @@ jobs:
           git config --global user.email "changjun@gmail.com"
           git config --global user.name "changjun"
 
-      - name: 同步最新的源码
-        run: |
-          git remote add openwrt https://github.com/coolsnowwolf/lede.git
-          git pull openwrt master
-          git remote -v
+#       - name: 同步最新的源码
+#         run: |
+#           git remote add openwrt https://github.com/coolsnowwolf/lede.git
+#           git pull openwrt master
+#           git remote -v
           
       - name: Update feeds
         run: |
